adds device id and port settings for atol fiscal printers

--- a/Skytecs.Hermes/appsettings.json
+++ b/Skytecs.Hermes/appsettings.json
@@ -1,13 +1,16 @@
 ﻿{
-  "Logging": {
-    "stdoutLogEnabled": true,
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Information"
-    }
-  },
+    "Logging": {
+        "stdoutLogEnabled": true,
+        "IncludeScopes": false,
+        "LogLevel": {
+            "Default": "Information"
+        }
+    },
 
-  "Password": "your_password",
+    "Password": "your_password",
 
-  "urls": "http://localhost:44444;"
+    "urls": "http://localhost:44444;",
+
+    "Port": 10,
+    "DeviceId": 61
 }
