#905 adds barcodes printing

--- a/Skytecs.Hermes/Skytecs.Hermes.csproj
+++ b/Skytecs.Hermes/Skytecs.Hermes.csproj
@@ -38,6 +38,9 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.1" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="System.Printing" />
+  </ItemGroup>
+  <ItemGroup>
     <Content Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
