#905 replace string to class Lable

--- a/Skytecs.Hermes/appsettings.json
+++ b/Skytecs.Hermes/appsettings.json
@@ -1,16 +1,18 @@
 ﻿{
-    "Logging": {
-        "stdoutLogEnabled": true,
-        "IncludeScopes": false,
-        "LogLevel": {
-            "Default": "Information"
-        }
-    },
+  "Logging": {
+    "stdoutLogEnabled": true,
+    "IncludeScopes": false,
+    "LogLevel": {
+      "Default": "Information"
+    }
+  },
 
-    "Password": "your_password",
+  "Password": "your_password",
 
-    "urls": "http://localhost:44444;",
+  "PrinterName": "ZDesigner TLP 2844",
 
-    "Port": 3,
-    "DeviceId": 61
+  "urls": "http://localhost:44444;",
+
+  "Port": 3,
+  "DeviceId": 61
 }
