--- a/Skytecs.Hermes/appsettings.json
+++ b/Skytecs.Hermes/appsettings.json
@@ -1,16 +1,22 @@
 ﻿{
-    "Logging": {
-        "stdoutLogEnabled": true,
-        "IncludeScopes": false,
-        "LogLevel": {
-            "Default": "Information"
-        }
-    },
+  "Logging": {
+    "stdoutLogEnabled": true,
+    "IncludeScopes": false,
+    "LogLevel": {
+      "Default": "Information"
+    }
+  },
 
-    "Password": "your_password",
+  "Password": "your_password",
 
-    "urls": "http://localhost:44444;",
+  "urls": "http://localhost:44444;",
 
-    "Port": 3,
-    "DeviceId": 61
+  "CentrifugoUrl": "ws://localhost:8000/connection/websocket",
+  "CentrifugoSecret": "6176494e-f4dc-4cb3-b123-c6c873b0465b",
+  "CentrifugoChannel": "test_ch",
+
+  "ClinicUrl": "http://localhost:20930/",
+
+  "Port": 3,
+  "DeviceId": 61
 }
