--- a/Skytecs.Hermes/appsettings.json
+++ b/Skytecs.Hermes/appsettings.json
@@ -7,16 +7,21 @@
     }
   },
 
-  "Password": "your_password",
+  "ConnectionStrings": {
+    "CashboxDatabase": "Filename=Cashbox.db"
+  },
 
+  // CommonSettings
   "urls": "http://localhost:44444;",
+  "Password": "your_password",
+  "ClinicUrl": "http://localhost:20930/",
 
+  // CentrifugoSettings
   "CentrifugoUrl": "ws://localhost:8000/connection/websocket",
   "CentrifugoSecret": "6176494e-f4dc-4cb3-b123-c6c873b0465b",
   "CentrifugoChannel": "test_ch",
 
-  "ClinicUrl": "http://localhost:20930/",
-
+  // FiscalPrinterSettings
   "Port": 3,
   "DeviceId": 61
 }
