clinic-974 adds lables printing

--- a/Skytecs.Hermes/appsettings.json
+++ b/Skytecs.Hermes/appsettings.json
@@ -14,7 +14,7 @@
   // CommonSettings
   "urls": "http://localhost:44444;",
   "Password": "your_password",
-  "ClinicUrl": "http://localhost:20930/",
+  "ClinicUrl": "http://localhost:20930",
 
   // CentrifugoSettings
   "CentrifugoUrl": "ws://localhost:8000/connection/websocket",
@@ -23,5 +23,8 @@
 
   // FiscalPrinterSettings
   "Port": 3,
-  "DeviceId": 61
+  "DeviceId": 61,
+
+  // BarcodePrinterSettings
+  "BarcodePrinterName": "ZDesigner TLP 2844"
 }
