--- a/Skytecs.Hermes/appsettings.json
+++ b/Skytecs.Hermes/appsettings.json
@@ -15,6 +15,7 @@
   "urls": "http://localhost:44444;",
   "Password": "your_password",
   "ClinicUrl": "http://localhost:20930",
+  "EnableCentrifugoListener": false,
 
   // CentrifugoSettings
   "CentrifugoUrl": "ws://localhost:8000/connection/websocket",
