--- a/Skytecs.Hermes/Skytecs.Hermes.csproj
+++ b/Skytecs.Hermes/Skytecs.Hermes.csproj
@@ -45,6 +45,9 @@
     <Content Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Update="nlog.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <None Update="app.config">
