clinic-974 moves database in special folder

--- a/Skytecs.Hermes/appsettings.json
+++ b/Skytecs.Hermes/appsettings.json
@@ -7,15 +7,12 @@
     }
   },
 
-  "ConnectionStrings": {
-    "CashboxDatabase": "Filename=Cashbox.db"
-  },
-
   // CommonSettings
   "urls": "http://localhost:44444;",
   "Password": "your_password",
   "ClinicUrl": "http://localhost:20930",
   "EnableCentrifugoListener": false,
+  "CashboxDatabase": "Cashbox.db",
 
   // CentrifugoSettings
   "CentrifugoUrl": "ws://localhost:8000/connection/websocket",
