--- a/Skytecs.Hermes/nlog.config
+++ b/Skytecs.Hermes/nlog.config
@@ -13,30 +13,42 @@
 
   <targets>
 
-    <target xsi:type="BufferingWrapper"
-            name="AsyncLogger"
-            bufferSize="200"
-            flushTimeout="5000">
-
-      <!--<target xsi:type="File" name="PrimaryLog" layout="${longdate} | ${level:uppercase=true} | ${logger} | ${message} | ${exception:format=ToString}" fileName="${basedir}/App_Data/log_${shortdate}.log" />-->
-      <target type="Weblog" host="https://logs.skytecs.ru/api/messages">
-        <layout xsi:type="JsonLayout">
-          <attribute name="source" layout="Skytecs.Hermes" />
-          <attribute name="time" layout="${longdate}" />
-          <attribute name="level" layout="${level:upperCase=true}"/>
+    <target name="telemetry"
+        xsi:type="AsyncWrapper"
+        queueLimit="100000"
+        timeToSleepBetweenBatches="50"
+        batchSize="10"
+        overflowAction="Block">
+      <target name="logstash"
+              type="Network"
+              address="https://telemetry.skytecs.ru"
+              newLine="True">
+        <layout type="JsonLayout">
+          <!-- name of the app -->
+          <attribute name="app" layout="${appdomain:format={1\}}" />
+          <attribute name="hostingEnv" layout="dev"/>
+          <attribute name="timestamp" layout="${longdate}" />
+          <attribute name="logger" layout="${logger}" />
+          <attribute name="machinename" layout="${machinename}" />
+          <attribute name="threadid" layout="${threadid}" />
+          <!--<attribute name="request-ip" layout="${aspnet-request-ip}" />-->
+          <attribute name="level" layout="${level}"/>
           <attribute name="message" layout="${message}" />
-          <attribute name="exception" layout="${exception:ToString}" />
-          <attribute name="application" layout="${processname}" />
+          <attribute name="exception" layout="${exception}" />
+          <attribute name="stacktrace" layout="${onexception:inner=${stacktrace}}"/>
           <attribute name="version" layout="${assembly-version}" />
-          <attribute name="processtime" layout="${processtime}" />
+
+          <!--<attribute name="trace-identifier" layout="${aspnet-TraceIdentifier}"/>
+            <attribute name="user-identity" layout="${aspnet-user-identity}"/>
+            <attribute name="mvc-controller" layout="${aspnet-mvc-controller}"/>
+            <attribute name="mvc-action" layout="${aspnet-mvc-action}"/>-->
         </layout>
       </target>
-
     </target>
 
   </targets>
   <rules>
     <!--<logger name="Default" minlevel="Trace" writeTo="PrimaryLog" />-->
-    <logger name="*" minlevel="Trace" writeTo="AsyncLogger" />
+    <logger name="*" minlevel="Info" writeTo="telemetry" />
   </rules>
 </nlog>
